@@ -61,7 +61,6 @@
 
 <screen><userinput remap="configure">FORCE_UNSAFE_CONFIGURE=1 ./configure \
             --prefix=/usr            \
-            --libexecdir=/usr/lib    \
             --enable-no-install-program=kill,uptime</userinput></screen>
 
     <variablelist>
