@@ -18,7 +18,7 @@ mkdir -pv /{media/{floppy,cdrom},sbin,srv,var}
 install -dv -m 0750 /root
 install -dv -m 1777 /tmp /var/tmp
 mkdir -pv /usr/{,local/}{bin,include,lib,sbin,src}
-mkdir -pv /usr/{,local/}share/{doc,info,locale,man}
+mkdir -pv /usr/{,local/}share/{color,dict,doc,info,locale,man}
 mkdir -v  /usr/{,local/}share/{misc,terminfo,zoneinfo}
 mkdir -pv /usr/{,local/}share/man/man{1..8}
 for dir in /usr /usr/local; do
@@ -30,7 +30,7 @@ esac
 mkdir -v /var/{log,mail,spool}
 ln -sv /run /var/run
 ln -sv /run/lock /var/lock
-mkdir -pv /var/{opt,cache,lib/{misc,locate},local}</userinput></screen>
+mkdir -pv /var/{opt,cache,lib/{color,misc,locate},local}</userinput></screen>
 
   <para>Directories are, by default, created with permission mode 755, but
   this is not desirable for all directories. In the commands above, two
