@@ -46,7 +46,6 @@
     <para>Prepare Findutils for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr                   \
-            --libexecdir=/usr/lib/findutils \
             --localstatedir=/var/lib/locate</userinput></screen>
 
     <variablelist>
