@@ -48,7 +48,6 @@
     <para>Prepare Flex for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr    \
-            --disable-static \
             --docdir=/usr/share/doc/flex-&flex-version;</userinput></screen>
 
     <para>Compile the package:</para>
@@ -98,7 +97,7 @@ chmod -v 755 /usr/bin/lex</userinput></screen>
 
       <seglistitem>
         <seg>flex, flex++ (link to flex), and lex</seg>
-        <seg>libfl.so and libfl_pic.so</seg>
+        <seg>libfl.{so,a} and libfl_pic.{so.a}</seg>
         <seg>/usr/share/doc/flex-&flex-version;</seg>
       </seglistitem>
     </segmentedlist>
@@ -143,7 +142,7 @@ chmod -v 755 /usr/bin/lex</userinput></screen>
       </varlistentry>
 
       <varlistentry id="libfl.so">
-        <term><filename class="libraryfile">libfl.a</filename></term>
+        <term><filename class="libraryfile">libfl.so</filename></term>
         <listitem>
           <para>The <filename class="libraryfile">flex</filename> library</para>
           <indexterm zone="ch-system-flex libfl.so">
