@@ -47,6 +47,7 @@
     <para>Prepare GRUB for compilation:</para>
 
 <screen><userinput remap="configure">./configure --prefix=/usr          \
+            --sbindir=/sbin        \
             --sysconfdir=/etc      \
             --disable-grub-emu-usb \
             --disable-efiemu       \
