@@ -1,5 +1,5 @@
-<!ENTITY version         "SVN-20140214">
-<!ENTITY releasedate     "February 14, 2014">
+<!ENTITY version         "SVN-20140216">
+<!ENTITY releasedate     "February 16, 2015">
 <!ENTITY copyrightdate   "1999-2014"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone       "7.5">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
